# o-toki-pona

./: Makefile  README.md  pyproject.toml
sona/: conf.py  index.rst
