[project]
name = "otokipona"
version = "0.1.0"
description = "ilo li moku e toki li pana e sona ni: ni li toki ala toki pona?"
authors = [
  { name = "jan Kekan San (@gregdan3)", email = "gregory.danielson3@gmail.com" },
]
dependencies = [
    "marisa-trie>=1.0.0",
    "unidecode>=1.3.6"
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
package-dir = "ilo"

[tool.pdm.dev-dependencies]
test = [
    "pytest-asyncio>=0.21.1",
    "pytest-skip-slow>=0.0.5",
    "pytest>=7.4.2",
    "hypothesis>=6.86.2",
    "line-profiler>=4.1.1",
]
lint = [
    "black>=23.9.1",
    "isort>=5.12.0"
]
docs = [
    "sphinx>=7.1.2",
    "furo>=2023.9.10",
    "sphinx-intl>=2.1.0"
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = "alasa"
python_files = "o_alasa_*.py"
python_functions = "o_alasa_*"
python_classes = "OAlasa*"

[tool.isort]
length_sort = "1"
profile = "black"
sections = "STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
import_heading_stdlib = "tan ilo akesi"
import_heading_thirdparty = "tan ilo ante"
import_heading_firstparty = "tan ilo ni"
import_heading_localfolder = "tan ilo ni"

[tool.pyright]
include = ["ilo/", "alasa/"]
exclude = ["**/__pycache__", "**/__pypackages__", "**/.venv"]
venvPath = "."
venv = ".venv"
executionEnvironments = [{ root = "." }]
